# mimap

./: README.md  requirements.txt  setup.cfg
source/mimap/: __init__.py  _dump_code.py  block.py  highlevel.py  item.py  metadata.py  priority.py  reference.py
tests/: test_block.py  test_item.py  test_mimap.py
