[metadata]
name = mimap
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Maps references to its metadata to help in accessing it based on its metadata.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/mimap
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/mimap/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    mapping
    metadata
    access

[options]
package_dir =
    = source
packages = find:
install_requires =

python_requires = >=3.6

[options.packages.find]
where=source
