[metadata]
name = mimap
version = 0.2.0
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Associates python object with priority.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/mimap
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/mimap/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = 
    mapping
    associate
    priority 
    object
    item
    block   

[options]
package_dir =
    = source
packages = find:
install_requires =

python_requires = >=3.6

[options.packages.find]
where=source
